--- a/dietersDilemmaBelief.html
+++ b/dietersDilemmaBelief.html
@@ -34,6 +34,34 @@
         transform: translateX(0);
       }
     }
+
+    .animate-blink {
+      position: relative;
+    }
+
+    .animate-blink::before {
+      content: '';
+      position: absolute;
+      inset: 0;
+      background-color: #fefce8;
+      border-radius: inherit;
+      animation: pulse 1.5s ease-in-out infinite;
+      z-index: 0;
+    }
+
+    .animate-blink > * {
+      position: relative;
+      z-index: 1;
+    }
+
+    @keyframes pulse {
+      0%, 100% {
+        opacity: 1;
+      }
+      50% {
+        opacity: 0.25;
+      }
+    }
   </style>
 </head>
 <body>
@@ -835,17 +863,13 @@
             
             {/* Main Card - Contains everything */}
             <div className="bg-white rounded-xl shadow-lg p-6">
-              {/* Title and bullets - always shown */}
-              <h2 className="text-xl font-bold text-gray-800 mb-4" dangerouslySetInnerHTML={{ __html: config.title }} />
-              <ul className="list-disc list-inside space-y-2 text-gray-700 mb-4">
-                <li dangerouslySetInnerHTML={{ __html: config.bullet1 }} />
-                <li dangerouslySetInnerHTML={{ __html: config.bullet2 }} />
-              </ul>
-
               {/* Walkthrough Stage */}
               {stage === 0 && (
                 <div className="animate-fadeIn">
-                  <h3 className="text-lg font-semibold text-gray-700 mb-4 text-center">Let's go through this scenario</h3>
+                  {/* Walkthrough text */}
+                  <div key={walkthroughStep} className="border border-yellow-200 rounded-lg p-4 mb-4 animate-blink">
+                    <p className="text-gray-700 text-center text-lg" dangerouslySetInnerHTML={{ __html: walkthroughContent.text }} />
+                  </div>
 
                   {/* Variable Panel with highlight */}
                   <VariablePanel
@@ -859,11 +883,6 @@
                     highlightPanel={walkthroughContent.highlight}
                     isWalkthrough={true}
                   />
-
-                  {/* Walkthrough text */}
-                  <div className="bg-yellow-50 border border-yellow-200 rounded-lg p-4 mb-6">
-                    <p className="text-gray-700 text-center text-lg" dangerouslySetInnerHTML={{ __html: walkthroughContent.text }} />
-                  </div>
 
                   {/* Next button */}
                   <div className="flex justify-center">
@@ -924,27 +943,21 @@
                 {/* Stage 1: First Pie Chart */}
                 {stage === 1 && (
                   <div className="animate-fadeIn">
-                    <div className="flex items-center gap-8">
-                      {/* Question on the left */}
-                      <div className="flex-1">
-                        {config.conditionText && (
-                          <p className="text-gray-700 text-lg mb-2">
-                            <span>In the scenario in which </span>
-                            <span dangerouslySetInnerHTML={{ __html: config.conditionText }} />
-                          </p>
-                        )}
-                        <p className="text-gray-700 text-lg" dangerouslySetInnerHTML={{ __html: config.pie1Question }} />
-                      </div>
-                      {/* Pie chart on the right */}
-                      <div className="flex-shrink-0">
-                        <PieChart
-                          value={pie1Value}
-                          onChange={setPie1Value}
-                          highlightColor={config.pie1Color}
-                        />
-                      </div>
+                    {config.conditionText && (
+                      <p className="text-gray-700 text-center mb-2">
+                        <span>In the scenario in which </span>
+                        <span dangerouslySetInnerHTML={{ __html: config.conditionText }} />
+                      </p>
+                    )}
+                    <p className="text-gray-700 text-center mb-6" dangerouslySetInnerHTML={{ __html: config.pie1Question }} />
+                    <div className="flex justify-center mb-6">
+                      <PieChart
+                        value={pie1Value}
+                        onChange={setPie1Value}
+                        highlightColor={config.pie1Color}
+                      />
                     </div>
-                    <div className="flex justify-center mt-6">
+                    <div className="flex justify-center">
                       <button
                         onClick={() => setStage(2)}
                         disabled={!canProceedToStage2}
@@ -963,27 +976,21 @@
                 {/* Stage 2: Second Pie Chart */}
                 {stage === 2 && (
                   <div className="animate-fadeIn">
-                    <div className="flex items-center gap-8">
-                      {/* Question on the left */}
-                      <div className="flex-1">
-                        {config.conditionText && (
-                          <p className="text-gray-700 text-lg mb-2">
-                            <span>In the scenario in which </span>
-                            <span dangerouslySetInnerHTML={{ __html: config.conditionText }} />
-                          </p>
-                        )}
-                        <p className="text-gray-700 text-lg" dangerouslySetInnerHTML={{ __html: config.pie2Question }} />
-                      </div>
-                      {/* Pie chart on the right */}
-                      <div className="flex-shrink-0">
-                        <PieChart
-                          value={pie2Value}
-                          onChange={setPie2Value}
-                          highlightColor={config.pie2Color}
-                        />
-                      </div>
+                    {config.conditionText && (
+                      <p className="text-gray-700 text-center mb-2">
+                        <span>In the scenario in which </span>
+                        <span dangerouslySetInnerHTML={{ __html: config.conditionText }} />
+                      </p>
+                    )}
+                    <p className="text-gray-700 text-center mb-6" dangerouslySetInnerHTML={{ __html: config.pie2Question }} />
+                    <div className="flex justify-center mb-6">
+                      <PieChart
+                        value={pie2Value}
+                        onChange={setPie2Value}
+                        highlightColor={config.pie2Color}
+                      />
                     </div>
-                    <div className="flex justify-center gap-4 mt-6">
+                    <div className="flex justify-center gap-4">
                       <button
                         onClick={() => setStage(1)}
                         className="px-6 py-3 rounded-lg font-medium text-lg transition-all bg-gray-200 hover:bg-gray-300 text-gray-700"
